vendor/thiserror-1.0.24/tests/ui/source-enum-not-error.rs
use thiserror::Error;

#[derive(Debug)]
pub struct NotError;

#[derive(Error, Debug)]
#[error("...")]
pub enum ErrorEnum {
    Broken {
        source: NotError,
    },
}

fn main() {}
